--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Mis Recetas</string>
     <string name="principal">MIS RECETAS</string>
+    <string name="ingresar">Iniciar Sesion</string>
+    <string name="usuario">Usuario</string>
+    <string name="contraseña">Contraseña</string>
 </resources>
